Propagating Snyk fixes to requirements3.txt

--- a/requirements.in
+++ b/requirements.in
@@ -24,17 +24,14 @@ lyft-stats
 lyft-stdlib>=1009.4.2
 lyft-suntime>=0.1.2
 marshmallow>=3.0.0b8
-
 # Defines experimental extensions to the standard "typing" module that are supported by the mypy typechecker.
 # Upstream url: https://github.com/python/mypy/tree/master/extensions
 # License: MIT
 mypy_extensions
-
 pynamodb>=3.3.3
 pytest<4.0.0
 pytest-cov
 pytest-mock
-
 python-dateutil>=2.6.1
 pytz>=2018.3
 rainbow-saddle>=0.4.0
@@ -42,10 +39,9 @@ statsd>=3.2.1
 webargs>=2.1.0
 lyft-settings
 lyft-ingest
-
 # For their testing configurations library
 lyft-paxgrowth-common==3.3.0
-
 # Lyft Protobuf definitions
 # Upstream url: https://github.com/lyft/idl
 lyft-idl==6871
+webargs==5.5.3
